tests/sema/fail/v41_fail_unit_sum_duplicate_member.ep
# COMPILE_FAIL_CONTAINS: duplicate sum member State.Ready
type State = Ready | Ready

fun main(): void {}
